[project]
name = "sunbeam-release"
version = "0.1.0"
description = "Release helpers for OpenStack Sunbeam/MicroStack"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.7",
]

[tool.uv]
package = true

[project.scripts]
sunbeam-release = "sunbeam_release.main:main"

[tool.setuptools]
packages = ["sunbeam_release"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"

# Formatting tools configuration
[tool.black]
line-length = 79

[tool.isort]
profile = "black"
multi_line_output = 3
force_grid_wrap = true

# Linting tools configuration
[tool.ruff]
line-length = 79
extend-exclude = ["__pycache__", "*.egg_info"]
lint.select = ["E", "W", "F", "C", "N", "R", "D"]
# Ignore E501 because using black creates errors with this
# Ignore D107 Missing docstring in __init__
lint.ignore = ["W505", "E501", "D107", "C901", "N818", "RET504"]
# D100, D101, D102, D103: Ignore missing docstrings in tests
lint.per-file-ignores = {"tests/*" = ["D100","D101","D102","D103"]}

[tool.ruff.lint.pydocstyle]
convention = "google"
