[metadata]
name = sunbeam-release
summary = Release helpers for OpenStack Sunbeam/MicroStack
description_file =
    README.md
author = Canonical
author_email = james.page@canonical.com
home_page = https://github.com/openstack-snaps/sunbeam-release
python_requires = >= 3.8
classifier =
    Environment :: Ubuntu
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operation System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[files]
packages =
    sunbeam_release

[entry_points]
console_scripts =
    sunbeam-release = sunbeam_release.main:main